<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ADESemaineActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/mainToolBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/orange"
        android:theme="@style/ToolBarStyle">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/semaineToolBAr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/orange" />


    </com.google.android.material.appbar.AppBarLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:background="@color/orange"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btAvant"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.4"
            android:background="@drawable/ic_arrow"
            android:onClick="semainePrecedentAction"
            android:scaleX="-1"
            android:scaleY="-1"
            android:textColor="@color/orange"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:ignore="SpeakableTextPresentCheck" />


        <TextView
            android:id="@+id/tvMoisAnnee"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="Fév 2022"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />


        <Button
            android:id="@+id/btApres"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.4"
            android:background="@drawable/ic_arrow"
            android:textColor="#EEDFCC"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:ignore="SpeakableTextPresentCheck" />


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tvLun"
            android:textAlignment="center"
            android:textColor="@color/orange"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tvMar"
            android:textAlignment="center"
            android:textColor="@color/orange"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/orange"
            android:text="@string/tvMer"
            android:textAlignment="center"
            android:textColor="@color/orange"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tvJeu"
            android:textAlignment="center"
            android:textColor="@color/orange"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tvVen"
            android:textAlignment="center"
            android:textColor="@color/orange"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tvSam"
            android:textAlignment="center"
            android:textColor="@color/orange"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tvDim"
            android:textAlignment="center"
            android:textColor="@color/orange"
            android:textSize="16sp"
            android:textStyle="bold" />

    </LinearLayout>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/calRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5">

    </androidx.recyclerview.widget.RecyclerView>

    <TextView
        android:id="@+id/tvDateSelec"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Date"
        android:textAlignment="center"
        android:textColor="@color/orange"
        android:textSize="24sp"
        android:textStyle="bold"/>


    <TextView
        android:id="@+id/tvVide"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/tvVide"
        android:textColor="@color/orange"
        android:textSize="20dp" />

    <ListView
        android:id="@+id/lvCours"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:divider="@android:color/transparent"
        android:dividerHeight="10sp">

    </ListView>

</LinearLayout>